# pulseaudio-sharp

./: .bzrignore  .travis.yml  Channel.cs  Context.cs  GLib.cs  HACKING  MainLoop.cs  Makefile.am  MyClass.cs  Operation.cs  Packages.mdproj  PropList.cs  Pulseaudio.csproj  Pulseaudio.sln  Server.cs  Sink.cs  SinkInfo.cs  SinkInput.cs  TODO  Util.cs  Volume.cs  configure.ac  pulseaudio-sharp-0.1.pc.in  pulseaudio-sharp.pc.in
PulseaudioTranslation/: PulseaudioTranslation.mdproj
Tests/: TestContext.cs  TestGLib.cs  TestMainLoop.cs  TestPropList.cs  TestSample.cs  TestServer.cs  TestUtil.cs  TestVolume.cs
m4/: expansions.m4
src/: AssemblyInfo.cs  AssemblyInfo.cs.in  Channel.cs  Context.cs  GLib.cs  MainLoop.cs  Operation.cs  PropList.cs  Sample.cs  ServerInfo.cs  Sink.cs  SinkInput.cs  UnmanagedCallbackManager.cs  Util.cs  Volume.cs
tests/: Helper.cs  TestChannel.cs  TestContext.cs  TestGLib.cs  TestMainLoop.cs  TestPropList.cs  TestSample.cs  TestSink.cs  TestSinkInput.cs  TestUnmanagedCallbackManager.cs  TestUtil.cs  TestVolume.cs
